trunk/Archive2/59/7e95808577108c/output
+ g++ -std=c++1y -O0 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp: In instantiation of 'struct SubTypeErrorMessage<>':
main.cpp:19:26:   required from here
main.cpp:3:5: error: static assertion failed: Attempt to access the non-existent subtype of TypeC.
     static_assert(X, "Attempt to access the non-existent subtype of TypeC.");
     ^
+ echo 1
1
